--- a/ProyectoAP_Final/FrontEnd/src/index.html
+++ b/ProyectoAP_Final/FrontEnd/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ProyectoFinal</title>
+  <title>Portfolio Web</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" type="image/x-icon" href="favicgit addon.ico"> -->
@@ -15,7 +15,7 @@
   <script src="https://kit.fontawesome.com/5f2423dc2f.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="mat-typography">
+<body>
   <app-root></app-root>
 </body>
 
